Added compressed data and make command to unzip and combine data

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,3 +1,9 @@
+data:
+	unzip ./data/yelp_business.csv.zip && \
+	unzip ./data/yelp_review_01.csv.zip && \
+	unzip ./data/yelp_review_02.csv.zip && \
+	cat ./data/yelp_review_01.csv ./data/yelp_review_02.csv > ./data/yelp_review.csv
+
 base:
 	docker build -t backend_spark-base ./spark-base
 
