Updated project to successfully respond to json requests

--- a/backend/Makefile
+++ b/backend/Makefile
@@ -1,7 +1,7 @@
-data:
-	unzip ./data/yelp_business.csv.zip && \
-	unzip ./data/yelp_review_01.csv.zip && \
-	unzip ./data/yelp_review_02.csv.zip && \
+data_files:
+	unzip ./data/yelp_business.csv.zip -d ./data && \
+	unzip ./data/yelp_review_01.csv.zip -d ./data && \
+	unzip ./data/yelp_review_02.csv.zip -d ./data && \
 	cat ./data/yelp_review_01.csv ./data/yelp_review_02.csv > ./data/yelp_review.csv
 
 base:
@@ -11,7 +11,7 @@ build:
 	docker-compose build
 
 run:
-	docker-compose up -d --scale spark-worker=3
+	docker-compose up --scale spark-worker=3
 
 stop:
 	docker-compose down
