--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 *.iml
 .gradle
-/local.properties
+local.properties
 .idea
 .DS_Store
 /build
@@ -8,5 +8,5 @@
 .externalNativeBuild
 .cxx
 *.csv
-*/.vscode/*
+.vscode
 *pycache*
